# nanoGPT.jax

./: main.py  pyproject.toml  train.py
