[project]
name = "nanogpt-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.0",
    "ipykernel>=6.30.1",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "orbax>=0.1.9",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
